<resources>
    <string name="app_name">My Business Analysis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notifications_admin_channel_name" translatable="false">Global channel</string>
    <string name="notifications_admin_channel_description" translatable="false">Notifications sent from the app admin
    </string>

    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="employees">Employees</string>
    <string name="payable_paid_amount">Payable/Paid Amount</string>
    <string name="today_business">Today Business</string>
    <string name="purchase">Purchase</string>
    <string name="my_outlet_analysis">My Outlet Analysis</string>
    <string name="my_clients">My Clients</string>
    <string name="outlet_settings">Outlet Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="paid">Paid</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="payable">Payable Amount</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="selected_date">Selected Date</string>
    <string name="cheque_number">Cheque Number</string>
    <string name="create_new_payment">Create New Payment</string>
    <string name="client_name">Client Name</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="create_payment">Create Payment</string>
    <string name="category_name">Category Name</string>
    <string name="chart_data_is_empty">Chart data is empty</string>
    <string name="save_business">Save Business</string>
    <string name="employee_login">Employee Login</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="bill_number">Bill Number</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="save_purchase">Save Purchase</string>
    <string name="address">Address</string>
    <string name="save_outlet">Save Outlet</string>
    <string name="pin_code">Pin Code</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="employee">Employees</string>
    <string name="save_employee">Save Employee</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_outlet">Employee Outlet</string>
    <string name="employee_contact">Employee Contact</string>
    <string name="client_access">Client Access</string>
    <string name="employee_access">Employee Access</string>

    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="previous">PREVIOUS</string>
    <string name="amount">Amount</string>
</resources>
