<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ui.fragments.AddPurchaseFragment"
              android:padding="@dimen/margin_16dp"
              android:orientation="vertical">
    <TextView
            android:id="@+id/frag_purchase_title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85">

            <EditText
                    android:id="@+id/frag_purchase_date_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_of_purchase" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_calendar"
                android:tint="@color/colorPrimary" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
                android:id="@+id/frag_purchase_client_text_id"
                android:inputType="textCapWords|textPersonName|textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/frag_purchase_billno_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bill_number"
                android:inputType="textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/frag_purchase_amount_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purchase_amount"
                android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/frag_purchase_save_btn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/save_purchase"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />
</LinearLayout>