<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16dp"
        android:background="@android:color/white"
        tools:context=".ui.fragments.AddPaymentFragment">

    <TextView
            android:id="@+id/remainder_task_title_id"
            android:text="@string/create_new_payment"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <ScrollView
            android:layout_below="@+id/remainder_task_title_id"
            android:layout_above="@+id/remainder_task_btn_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/remainder_task_date_id"
                            android:hint="@string/selected_date"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                        android:src="@android:drawable/ic_menu_my_calendar"
                        android:layout_weight="0.15"
                        android:tint="@color/colorPrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                        android:id="@+id/remainder_task_company_id"
                        android:hint="@string/client_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                        android:id="@+id/remainder_task_category_id"
                        android:hint="@string/category_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/remainder_task_cheque_id"
                        android:hint="@string/cheque_number"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/remainder_task_amount_id"
                        android:hint="@string/payable_amount"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                    android:id="@+id/remainder_task_remind_id"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"/>
        </LinearLayout>

    </ScrollView>

    <Button
            android:id="@+id/remainder_task_btn_id"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/create_payment"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>