<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                tools:context=".ui.fragments.ClientFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_client_recycler_view_id"
            android:layout_above="@+id/frag_client_editor_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <TextView
            android:id="@+id/frag_client_empty_id"
            android:text="@string/data_is_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/holo_red_light"
            android:gravity="center"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/frag_client_editor_layout"
            app:cardElevation="@dimen/margin_16dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                        android:id="@+id/frag_client_edittext_id"
                        android:hint="@string/client_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                        android:id="@+id/frag_category_edittext_id"
                        android:hint="@string/category_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:id="@+id/frag_client_cancel_id"
                        android:text="@string/cancel"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_red_light"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/frag_client_save_id"
                        android:text="@string/save"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_blue_dark"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/frag_client_fab_id"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:tint="@android:color/white"
            android:src="@drawable/ic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>