<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.AddEmployeeFragment">
    <ImageView
            android:id="@+id/add_employee_banner_id"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <ImageView
            android:id="@+id/add_employee_logo_id"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/add_employee_layout_id"
            android:layout_below="@+id/add_employee_logo_id"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/margin_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/add_employee_user_name_id"
                    android:hint="@string/employee_name"
                    android:maxLines="1"
                    android:inputType="textCapWords|textPersonName|textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/add_employee_mobile_id"
                    android:hint="@string/employee_contact"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/add_employee_outlet_name_id"
                    android:hint="@string/employee_outlet"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:maxLines="1"
                    android:focusableInTouchMode="false"
                    android:inputType="textCapWords|textPersonName|textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:id="@+id/add_employee_btn_id"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/save_employee"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>