<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">
    <LinearLayout
            android:padding="6dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/row_purchase_date_id"
                    android:text="@string/selected_date"
                    android:textColor="@android:color/darker_gray"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:id="@+id/row_purchase_delete_id"
                    android:src="@android:drawable/ic_menu_delete"
                    android:tint="@android:color/holo_red_light"
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:id="@+id/row_purchase_client_id"
                android:text="@string/client_name"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/row_purchase_billno_id"
                android:text="@string/cheque_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/row_purchase_amount_id"
                android:textColor="@android:color/holo_red_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>