<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.fragments.OutletFragment">

    <RelativeLayout
            android:id="@+id/frag_setup_image_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/frag_setup_banner_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

        <ImageView
                android:id="@+id/frag_setup_edit_banner_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@android:drawable/ic_menu_edit" />

        <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/frag_setup_logo_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:text="Edit"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimaryDark"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:id="@+id/frag_Setup_edit_logo_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/frag_setup_image_id"
            android:layout_above="@+id/frag_setup_save_btn_id"
            android:layout_marginTop="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:padding="@dimen/margin_16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/frag_setup_name_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/outlet_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp">

                    <EditText
                            android:id="@+id/frag_setup_contact_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact"
                            android:inputType="phone"
                            android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:gravity="bottom">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="8">

                        <EditText
                                android:id="@+id/frag_setup_zipcode_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pin_code"
                                android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                            android:id="@+id/frag_setup_search_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:src="@android:drawable/ic_search_category_default" />
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <AutoCompleteTextView
                            android:id="@+id/frag_setup_address_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="textCapWords|textPersonName|textNoSuggestions" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/frag_setup_save_btn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/save_outlet"
            android:textColor="@android:color/white" />

</RelativeLayout>